Backface visibility fix for PLP refinement bar
Close #96

--- a/static_files/scss/jack-jones.scss
+++ b/static_files/scss/jack-jones.scss
@@ -95,3 +95,8 @@
 .tap-to-win {
   display : none !important;
 }
+
+// PLP refinements bar fix
+#branded.pt_category .container_24 .grid_24.refinement-line {
+    @include backface-visibility(hidden);
+}
